OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/Program_Compliance__c.object-meta.xml
<CustomObject>
    <label>Program Compliance</label>
    <nameField>
        <label>Program Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Compliance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>