OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Charter__c.field-meta.xml
<CustomField>
    <fullName>Charter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charter</label>
    <type>Checkbox</type>
</CustomField>