OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Chuzo_Shop_Link__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_Shop_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chuzo Shop Link</label>
    <type>Checkbox</type>
</CustomField>