OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/External_Program_Compliance_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Program_Compliance_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Program Compliance ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>