OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Frontier__c.field-meta.xml
<CustomField>
    <fullName>Frontier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frontier</label>
    <type>Checkbox</type>
</CustomField>