OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Last_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activation_Date__c</fullName>
    <label>Last Activation Date</label>
    <type>Date</type>
</CustomField>