OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Program_Region__c.field-meta.xml
<CustomField>
    <fullName>Program_Region__c</fullName>
    <formula>TEXT(Account_Name__r.Region__c )</formula>
    <label>Program Region</label>
    <type>Text</type>
</CustomField>