OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Program_Territory__c.field-meta.xml
<CustomField>
    <fullName>Program_Territory__c</fullName>
    <formula>TEXT(Account_Name__r.Territory__c)</formula>
    <label>Program Territory</label>
    <type>Text</type>
</CustomField>