OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>MDP</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>SafeHaven</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Brinks</fullName>
            </value>
            <value>
                <fullName>TMobile</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
                <isActive>false</isActive>
                <label>Charter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>