OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Reason_for_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Suspension__c</fullName>
    <label>Reason for Suspension</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>