OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Review_Owner__c.field-meta.xml
<CustomField>
    <fullName>Review_Owner__c</fullName>
    <label>Review Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Katelyn Burns</fullName>
            </value>
            <value>
                <fullName>Eric Overway</fullName>
            </value>
            <value>
                <fullName>Halli Jarosz</fullName>
            </value>
            <value>
                <fullName>Scott Brewer</fullName>
            </value>
            <value>
                <fullName>Lisa Taylor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>