OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Review_Owner_lookup__c.field-meta.xml
<CustomField>
    <fullName>Review_Owner_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>*Review Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>