OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <label>Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Manipulation</fullName>
            </value>
            <value>
                <fullName>Cross Credit Scoring</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Proven Fraud</fullName>
            </value>
            <value>
                <fullName>New Dealer Review</fullName>
            </value>
            <value>
                <fullName>Metrics Quality</fullName>
            </value>
            <value>
                <fullName>TCPA</fullName>
            </value>
            <value>
                <fullName>Sales Spike</fullName>
            </value>
            <value>
                <fullName>Conditional Onboarding Review</fullName>
            </value>
            <value>
                <fullName>ID Mismatch</fullName>
            </value>
            <value>
                <fullName>Offshore Call Center</fullName>
            </value>
            <value>
                <fullName>Possible Fraud</fullName>
            </value>
            <value>
                <fullName>Sales Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>