OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/T_Mobile_FFL__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_FFL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T-Mobile FFL</label>
    <type>Checkbox</type>
</CustomField>