OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Term_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Term_Letter_Sent__c</fullName>
    <label>Term Letter Sent</label>
    <type>Date</type>
</CustomField>