OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Termination_Type__c.field-meta.xml
<CustomField>
    <fullName>Termination_Type__c</fullName>
    <label>Termination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Term</fullName>
            </value>
            <value>
                <fullName>Program Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>