OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/fields/Xfinity__c.field-meta.xml
<CustomField>
    <fullName>Xfinity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xfinity</label>
    <type>Checkbox</type>
</CustomField>