OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/validationRules/Program_Suspension.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Suspension</fullName>
    <active>true</active>
    <description>Rule that requires a reason for suspension when program suspension is checked</description>
    <errorConditionFormula>AND(
Program_Suspension__c  = TRUE,
ISBLANK(Reason_for_Suspension__c))</errorConditionFormula>
    <errorDisplayField>Reason_for_Suspension__c</errorDisplayField>
    <errorMessage>Please enter a reason for suspension.</errorMessage>
</ValidationRule>