OnboardingV2Minimal/force-app/main/default/objects/Program_Compliance__c/validationRules/Terminated_Review_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Terminated_Review_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Current_Review_Status__c,&quot;Terminated&quot;),
OR(
ISBLANK(Term_Letter_Sent__c),
ISBLANK(Last_Activation_Date__c),
ISBLANK(Churn_Period__c),
ISBLANK(Last_Payment_Date__c)))</errorConditionFormula>
    <errorMessage>Please ensure Term Letter Sent, Last Activation Date, Churn Period, or Last Payment Date are not blank before saving the record.</errorMessage>
</ValidationRule>